# eMicroservices

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: aws.yml  docker-publish.yml  donatello.yaml  kimberly.yaml  leonardo.yaml  michelangelo.yaml  nginx.yaml  splinter.yaml  tommy.yaml
infrastructure/example-application-service/: ci-cd.yml
infrastructure/nginx/: Dockerfile  eMicroservices.conf  nginx.conf
infrastructure/terraform/: 0_vpc.tf  1_security_groups.tf  README.md  load_balancer.tf  main.tf  outputs.tf  variables.tf
infrastructure/traefik/: traefik.toml
services/donatello/: Dockerfile  Dockerfile.dev  alembic.ini  entrypoint  entrypoint.sh  pyproject.toml
services/example-application-service/: Dockerfile  alembic.ini  ci-cd.yml  deploy.py  pyproject.toml
services/example-application-service/app/: main.py
services/example-application-service/app/core/: config.py
services/example-application-service/app/db/: session.py
services/example-application-service/app/models/: user.py
services/example-application-service/migrations/: env.py
services/example-application-service/migrations/versions/: 51609fecc797_user_configuration.py  636f5c0e963e_user_configuration.py  e7ca8189f74a_init.py
services/example-application-service/tests/integration/test_web_app/: test_main.py
services/example_application/: ci-cd.yml  pyproject.toml
services/example_application/app/: main.py
services/example_application/app/core/: config.py
services/example_application/tests/integration/test_web_app/: test_main.py
services/leonardo/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  entrypoint  entrypoint.sh  pyproject.toml
services/leonardo/app/: admin.py  urls.py  views.py
services/leonardo/app/migrations/: 0001_initial.py  0002_item.py  0003_item_is_active.py
services/leonardo/app/models/: __init__.py  categories_model.py  items_model.py
services/leonardo/app/serializers/: category_serializer.py  item_serializer.py
services/leonardo/app/views/: category_view.py
services/leonardo/core/: settings.py  urls.py
services/michelangelo/: Dockerfile  Dockerfile.dev  aerich.ini  entrypoint  entrypoint.sh  main.py  pyproject.toml  pytest.ini  worker.py
services/michelangelo/app/: base_config.json  consts.py  main.py  urls.py  utils.py
services/michelangelo/app/api/: accounts.py  users.py
services/michelangelo/app/core/: authentication.py  config.py  jwt.py  logging.py  queue.py  security.py
services/michelangelo/app/crud/: users.py
services/michelangelo/app/db/: session.py
services/michelangelo/app/models/: __init__.py  accounts.py  user.py  users.py
services/michelangelo/app/schemas/: token.py  users.py
services/michelangelo/app/tests/: conftest.py
services/michelangelo/app/tests/api_tests/: auth_tests.py  health_tests.py
services/michelangelo/migrations/models/: 1_20210927190739_change_name.sql  2_20210927214320_None.sql  3_20210928190049_users_init.sql  4_20211002112847_update.sql  5_20211016165139_account_modification.sql
services/michelangelo/templates/: account_confirmation.html
services/splinter/: Dockerfile  Dockerfile.dev  next.config.js  (+2 more)
workers/kimberly/: Dockerfile  entrypoint  entrypoint.sh  main.py  pyproject.toml
workers/kimberly/app/: base_config.json  main.py
workers/kimberly/app/core/: config.py  logging.py  queue.py
workers/kimberly/app/external_services/: ses.py
workers/tommy/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
workers/tommy/app/core/: cache.py  logging.py
(+58 files in other folders)
