[tool.poetry]
name = "example_application"
version = "0.1.0"
description = ""
authors = ["nirmansour <nirooma@icloud.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
