[tool.poetry]
name = "another_service_example"
version = "0.1.0"
description = ""
authors = ["nirmansour <nirooma@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
