[tool.poetry]
name = "another_service_example"
version = "0.1.0"
description = ""
authors = ["nirmansour <nirooma@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
requests = "^2.26.0"
tortoise-orm = "^0.17.7"
aerich = "^0.5.8"
psycopg2-binary = "^2.9.1"
asyncpg = "^0.24.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
ipython = "^7.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
