[tool.poetry]
name = "kimberly"
version = "0.1.0"
description = ""
authors = ["nirmansour <nirooma@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kombu = "^5.1.0"
fastapi = "^0.68.1"
boto3 = "^1.18.44"
vonage = "^2.5.5"
ipython = "^7.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
